Criado detalhar venda

--- a/partials/leftMenu.html
+++ b/partials/leftMenu.html
@@ -22,7 +22,7 @@
       <div class="menu_section">
         <h3>General</h3>
         <ul class="nav side-menu">
-          <li><a href="index.html" class="current-page"><i class="fa fa-shopping-cart"></i>Ver vendas</a></li>
+          <li><a href="#/" class="current-page"><i class="fa fa-shopping-cart"></i>Ver vendas</a></li>
           <li><a href="vender.html"><i class="fa fa-shopping-cart"></i>Vender</a></li>
           <li><a href="cliente.html"><i class="fa fa-user"></i> Clientes </a></li>
           <li><a href="produtos_servicos.html"><i class="fa fa-cubes"></i> Produtos e serviços </a></li>
